@@ -45,6 +45,8 @@ address-edit: new actions=name-replace-character:[search],[replace]
 rule-edit: new action "name-Replace-Character:search,replace"
 service-edit: new action "name-Replace-Character:search,replace"
 rule-edit: new filters (from is.in.file [FILENAME]) / (to is.in.file [FILENAME])
+appid-enable: introduce new script to enable APP-IDs which are set to disabled - directly against panorama or via panorama to all connected firewalls on panorama
+
 
 utils(under development):
 ike: new script to show all IKE/IPsec profile and config settings
